--- a/frontend/app/.prettierrc.json
+++ b/frontend/app/.prettierrc.json
@@ -6,12 +6,13 @@
   "semi": true,
   "singleQuote": true,
   "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
   "trailingComma": "all",
   "bracketSpacing": true,
   "bracketSameLine": false,
   "arrowParens": "always",
-  "singleAttributePerLine": true,
   "proseWrap": "always",
-  "jsxSingleQuote": false,
-  "endOfLine": "lf"
+  "htmlWhitespaceSensitivity": "css",
+  "endOfLine": "lf",
+  "singleAttributePerLine": true
 }
