--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,7 +16,8 @@
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
