--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@tanstack/react-query": "^5.40.1",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
