--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -13,6 +13,7 @@
     "format:fix": "prettier --write src/"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@tanstack/react-query": "^5.40.1",
@@ -20,8 +21,11 @@
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-hook-form-mantine": "^3.1.3",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.43.1",
