--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@mantine/notifications": "^7.10.1",
     "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
