app settings & packages

--- a/frontend/bff/appsettings.json
+++ b/frontend/bff/appsettings.json
@@ -2,8 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Yarp": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Authority": "",
+    "ClientId": "",
+    "ClientSecret": ""
+  },
+  "RemoteApis": {
+    "ShoplistsApiUrl": ""
+  },
+  "Frontend": {
+    "ClientUrl": ""
+  }
 }
