--- a/api/src/1-core/Domain/Domain.csproj
+++ b/api/src/1-core/Domain/Domain.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <AssemblyName>Shoplists.Domain</AssemblyName>
         <RootNamespace>Shoplists.Domain</RootNamespace>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
 </Project>
