--- a/api/src/1-core/Application/Application.csproj
+++ b/api/src/1-core/Application/Application.csproj
@@ -6,6 +6,17 @@
         <Nullable>enable</Nullable>
         <AssemblyName>Shoplists.Application</AssemblyName>
         <RootNamespace>Shoplists.Application</RootNamespace>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    </ItemGroup>
 
 </Project>
