--- a/api/src/2-infrastructure/Infrastructure/Infrastructure.csproj
+++ b/api/src/2-infrastructure/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,11 @@
         <Nullable>enable</Nullable>
         <AssemblyName>Shoplists.Infrastructure</AssemblyName>
         <RootNamespace>Shoplists.Infrastructure</RootNamespace>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\1-core\Application\Application.csproj" />
+    </ItemGroup>
 
 </Project>
