--- a/api/src/2-infrastructure/Persistence/Persistence.csproj
+++ b/api/src/2-infrastructure/Persistence/Persistence.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\..\1-core\Application\Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    </ItemGroup>
+
 </Project>
