--- a/api/src/3-presentation/Api/appsettings.json
+++ b/api/src/3-presentation/Api/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbContext": ""
+  },
+  "Authentication": {
+    "Issuer": "",
+    "Audiences": []
+  }
 }
