--- a/api/src/3-presentation/Api/appsettings.Development.json
+++ b/api/src/3-presentation/Api/appsettings.Development.json
@@ -1,10 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Information",
-      "Shoplists": "Debug"
-    }
+      "Override": {
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "Shoplists": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {SourceContext} {NewLine}{Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ]
   }
 }
