--- a/api/src/3-presentation/Api/appsettings.json
+++ b/api/src/3-presentation/Api/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppDbContext": ""
   },
